--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </header>
 
         <main class="app-main">
-            <!-- ECRAN 1: DASHBOARD (vizibil by default) -->
+            <!-- ECRAN 1: DASHBOARD (Neschimbat) -->
             <div id="dashboard-screen" class="screen active">
                 <div class="info-grid">
                     <div class="info-card"><h3>📅 Perioada</h3><p>2 Săpt.</p><span>Aug-Sep 2025</span></div>
@@ -31,7 +31,7 @@
                 </div>
                 
                 <div class="content-card vehicle-card">
-                    <img src="https://i.imgur.com/8N0xq2d.jpeg" alt="MONSTER">
+                    <img src="https://images.unsplash.com/photo-1627575397331-527a7694683b?w=800&auto=format&fit=crop" alt="MONSTER">
                     <div class="card-body">
                         <h2>MONSTER-ul</h2>
                         <p>Mercedes Sprinter 4x4. Căruța noastră de foc.</p>
@@ -40,40 +40,73 @@
                 </div>
             </div>
 
-            <!-- ECRAN 2: BUGET -->
+            <!-- ECRAN 2: BUGET (Actualizat) -->
             <div id="budget-screen" class="screen">
                 <div class="total-budget-card">
                     <h3>Total / Persoană</h3>
-                    <p id="total-cost">750 €</p>
-                    <small>*Fără costul mașinii și mâncare</small>
+                    <p id="total-cost">1.150 €</p>
+                    <small>*Fără costul mașinii (1400€/pers)</small>
                 </div>
                 <ul class="budget-list">
                     <li><span>✈️ Bilete de Avion</span><span class="cost">~500 €</span></li>
-                    <li><span>⛽ Motorină "Monster"</span><span class="cost">~150 €</span></li>
+                    <li><span>⛽ Motorină "Monster"</span><span class="cost">400 €</span></li>
+                    <li><span>🍞 Mâncare (estimat)</span><span class="cost">~150 €</span></li>
                     <li><span>🏕️ Camping</span><span class="cost">100 €</span></li>
-                    <li><span>🍞 Mâncare</span><span class="cost">0 € <small>(Cerșim)</small></span></li>
                 </ul>
             </div>
 
-            <!-- ECRAN 3: HARTA -->
+            <!-- ECRAN 3: HARTA (Actualizat masiv) -->
             <div id="map-screen" class="screen">
                 <div class="content-card location-card">
-                    <img src="https://i.imgur.com/uNkvfVB.jpeg" alt="Landmannalaugar">
-                    <div class="card-body">
-                        <h2>1. Landmannalaugar</h2>
-                        <p>Inima colorată a Islandei. Munți, cratere, lacuri și izvoare termale.</p>
-                    </div>
+                    <img src="https://images.unsplash.com/photo-1500964757637-c85e8a162699?w=800&auto=format&fit=crop" alt="Landmannalaugar">
+                    <div class="card-body"><h2>1. Landmannalaugar</h2><p>Inima colorată a Islandei. Munți, cratere, lacuri și izvoare termale.</p></div>
                 </div>
                 <div class="content-card location-card">
-                    <img src="https://i.imgur.com/5lPMV1t.jpeg" alt="Laki Craters">
-                    <div class="card-body">
-                        <h2>2. Laki Craters</h2>
-                        <p>Peisaj apocaliptic. Peste 130 de cratere și canioane spectaculoase.</p>
-                    </div>
+                    <img src="https://images.unsplash.com/photo-1534279539332-d34a8a142814?w=800&auto=format&fit=crop" alt="Laki Craters">
+                    <div class="card-body"><h2>2. Laki Craters</h2><p>Peisaj apocaliptic. Peste 130 de cratere și canioane spectaculoase.</p></div>
+                </div>
+                <div class="content-card location-card">
+                    <img src="https://images.unsplash.com/photo-1617190534649-d8c4234a2d34?w=800&auto=format&fit=crop" alt="Kerlingarfjoll">
+                    <div class="card-body"><h2>3. Kerlingarfjoll + Hveravellir</h2><p>Zonă geotermală vibrantă, cu munți de riolit și izvoare fierbinți.</p></div>
+                </div>
+                <div class="content-card location-card">
+                    <img src="https://images.unsplash.com/photo-1547733994-9e3b51861a43?w=800&auto=format&fit=crop" alt="Cascada Axlafoss">
+                    <div class="card-body"><h2>4. Axlafoss</h2><p>Cascadă mai puțin cunoscută, într-un canion impresionant.</p></div>
+                </div>
+                <div class="content-card location-card">
+                    <img src="https://images.unsplash.com/photo-1604789232362-3867562bec98?w=800&auto=format&fit=crop" alt="Cascada Blafjallafoss">
+                    <div class="card-body"><h2>5. Blafjallafoss</h2><p>Cascada spectaculoasă peste care se poate trece cu mașina pe deasupra.</p></div>
+                </div>
+                <div class="content-card location-card">
+                    <img src="https://images.unsplash.com/photo-1633267290933-2336c175852a?w=800&auto=format&fit=crop" alt="Maelifell">
+                    <div class="card-body"><h2>6. Maelifell</h2><p>Muntele iconic, perfect conic, în mijlocul deșertului negru.</p></div>
+                </div>
+                <div class="content-card location-card">
+                    <img src="https://images.unsplash.com/photo-1632369991393-9671f7536128?w=800&auto=format&fit=crop" alt="Raudibotn">
+                    <div class="card-body"><h2>7. Raudibotn + Holmsarfossar</h2><p>Crater de un roșu intens și cascadele din apropiere.</p></div>
+                </div>
+                <div class="content-card location-card">
+                    <img src="https://images.unsplash.com/photo-1579487785973-74d2ca7abdd5?w=800&auto=format&fit=crop" alt="Thakgil">
+                    <div class="card-body"><h2>8. Thakgil (Þakgil)</h2><p>Zonă de camping și drumeții, cu formațiuni stâncoase ascuțite, lângă un ghețar.</p></div>
+                </div>
+                <div class="content-card location-card">
+                    <img src="https://images.unsplash.com/photo-1503614472-8c93d56e92ce?w=800&auto=format&fit=crop" alt="Skogafoss">
+                    <div class="card-body"><h2>9. The Waterfall Hike</h2><p>Traseu de 13km ce pornește de la Skogafoss, cu peste 15 cascade.</p></div>
+                </div>
+                <div class="content-card location-card">
+                    <img src="https://images.unsplash.com/photo-1628359441744-53746736c244?w=800&auto=format&fit=crop" alt="Langisjor">
+                    <div class="card-body"><h2>10. Ofaerufoss + Langisjor</h2><p>Cascadă în canionul Eldgjá și unul dintre cele mai mari lacuri, perfect pentru drone.</p></div>
+                </div>
+                <div class="content-card location-card">
+                    <img src="https://images.unsplash.com/photo-1553667818-57fb44116c53?w=800&auto=format&fit=crop" alt="Braided Rivers">
+                    <div class="card-body"><h2>11. Braided Rivers</h2><p>Râuri glaciare care formează modele abstracte spectaculoase, văzute de sus.</p></div>
+                </div>
+                <div class="content-card location-card">
+                    <div class="card-body"><h2>Și mai mult...</h2><p>Există și alte locații pe care le vom discuta și adăuga ulterior, când finalizăm itinerariul.</p></div>
                 </div>
             </div>
 
-            <!-- ECRAN 4: CHECKLIST -->
+            <!-- ECRAN 4: CHECKLIST (Neschimbat) -->
             <div id="checklist-screen" class="screen">
                  <ul class="checklist">
                     <!-- Elementele vor fi adăugate din JS -->
