--- a/index.html
+++ b/index.html
@@ -22,64 +22,72 @@
         </header>
 
         <main class="app-main">
-            <!-- ECRAN 1: DASHBOARD (Neschimbat) -->
+            <!-- ECRAN 1: DASHBOARD (Actualizat cu textul exact) -->
             <div id="dashboard-screen" class="screen active">
                 <div class="info-grid">
                     <div class="info-card"><h3>📅 Perioada</h3><p>2 Săpt.</p><span>Aug-Sep 2025</span></div>
                     <div class="info-card"><h3>🌋 Aventură</h3><p>MAXIM</p><span>Nivel epic</span></div>
-                    <div class="info-card"><h3>📸 Foto</h3><p>MAXIM+</p><span>Pregătiți senzorii</span></div>
+                    <div class="info-card"><h3>📸 Foto</h3><p>MAXIM+</p><span>Și mai maxim</span></div>
                 </div>
                 
                 <div class="content-card vehicle-card">
                     <img src="https://images.unsplash.com/photo-1627575397331-527a7694683b?w=800&auto=format&fit=crop" alt="MONSTER">
                     <div class="card-body">
-                        <h2>MONSTER-ul</h2>
-                        <p>Mercedes Sprinter 4x4. Căruța noastră de foc.</p>
-                        <span class="price-tag">Închiriere: 2800 €</span>
+                        <h2>MONSTER</h2>
+                        <p>Mercedes Sprinter modificat. Căruța care ne va transporta.</p>
+                        <span class="price-tag">Cost: 2800 €</span>
                     </div>
                 </div>
             </div>
 
-            <!-- ECRAN 2: BUGET (Actualizat) -->
+            <!-- ECRAN 2: BUGET (Actualizat 100% conform textului) -->
             <div id="budget-screen" class="screen">
-                <div class="total-budget-card">
-                    <h3>Total / Persoană</h3>
-                    <p id="total-cost">1.150 €</p>
-                    <small>*Fără costul mașinii (1400€/pers)</small>
-                </div>
+                <!-- Am eliminat cardul cu totalul pentru a respecta textul original -->
                 <ul class="budget-list">
-                    <li><span>✈️ Bilete de Avion</span><span class="cost">~500 €</span></li>
-                    <li><span>⛽ Motorină "Monster"</span><span class="cost">400 €</span></li>
-                    <li><span>🍞 Mâncare (estimat)</span><span class="cost">~150 €</span></li>
-                    <li><span>🏕️ Camping</span><span class="cost">100 €</span></li>
+                    <li>
+                        <span>✈️ Bilete de avion</span>
+                        <span class="cost">~500 € / pers <small>mergem cu nașu'</small></span>
+                    </li>
+                    <li>
+                        <span>⛽ Bani motorină</span>
+                        <span class="cost">400 € / pers <small>800€ total</small></span>
+                    </li>
+                    <li>
+                        <span>🏕️ Bani camping</span>
+                        <span class="cost">100 € / pers</span>
+                    </li>
+                    <li>
+                        <span>🍞 Bani de mâncare</span>
+                        <span class="cost">~150 € / pers <small>cerșim la fiecare punct turistic</small></span>
+                    </li>
                 </ul>
             </div>
 
-            <!-- ECRAN 3: HARTA (Actualizat masiv) -->
+            <!-- ECRAN 3: HARTA (Conținutul este deja corect) -->
             <div id="map-screen" class="screen">
                 <div class="content-card location-card">
                     <img src="https://images.unsplash.com/photo-1500964757637-c85e8a162699?w=800&auto=format&fit=crop" alt="Landmannalaugar">
-                    <div class="card-body"><h2>1. Landmannalaugar</h2><p>Inima colorată a Islandei. Munți, cratere, lacuri și izvoare termale.</p></div>
+                    <div class="card-body"><h2>1. Landmannalaugar</h2><p>Cu tot ce înseamnă el, cratere, munți colorați, lacuri etc.</p></div>
                 </div>
                 <div class="content-card location-card">
                     <img src="https://images.unsplash.com/photo-1534279539332-d34a8a142814?w=800&auto=format&fit=crop" alt="Laki Craters">
-                    <div class="card-body"><h2>2. Laki Craters</h2><p>Peisaj apocaliptic. Peste 130 de cratere și canioane spectaculoase.</p></div>
+                    <div class="card-body"><h2>2. Laki craters</h2><p>Plus locații din zonă.</p></div>
                 </div>
                 <div class="content-card location-card">
                     <img src="https://images.unsplash.com/photo-1617190534649-d8c4234a2d34?w=800&auto=format&fit=crop" alt="Kerlingarfjoll">
-                    <div class="card-body"><h2>3. Kerlingarfjoll + Hveravellir</h2><p>Zonă geotermală vibrantă, cu munți de riolit și izvoare fierbinți.</p></div>
+                    <div class="card-body"><h2>3. Kerlingarfjoll + Hveravellir</h2><p>Zonă geotermală vibrantă și izvoare fierbinți.</p></div>
                 </div>
                 <div class="content-card location-card">
                     <img src="https://images.unsplash.com/photo-1547733994-9e3b51861a43?w=800&auto=format&fit=crop" alt="Cascada Axlafoss">
-                    <div class="card-body"><h2>4. Axlafoss</h2><p>Cascadă mai puțin cunoscută, într-un canion impresionant.</p></div>
+                    <div class="card-body"><h2>4. Axlafoss</h2><p>Cascadă într-un canion impresionant.</p></div>
                 </div>
                 <div class="content-card location-card">
                     <img src="https://images.unsplash.com/photo-1604789232362-3867562bec98?w=800&auto=format&fit=crop" alt="Cascada Blafjallafoss">
-                    <div class="card-body"><h2>5. Blafjallafoss</h2><p>Cascada spectaculoasă peste care se poate trece cu mașina pe deasupra.</p></div>
+                    <div class="card-body"><h2>5. Blafjallafoss</h2><p>Cascada cu mașina pe deasupra.</p></div>
                 </div>
                 <div class="content-card location-card">
                     <img src="https://images.unsplash.com/photo-1633267290933-2336c175852a?w=800&auto=format&fit=crop" alt="Maelifell">
-                    <div class="card-body"><h2>6. Maelifell</h2><p>Muntele iconic, perfect conic, în mijlocul deșertului negru.</p></div>
+                    <div class="card-body"><h2>6. Maelifell</h2><p>Muntele din deșertul negru – una dintre cele mai râvnite locații.</p></div>
                 </div>
                 <div class="content-card location-card">
                     <img src="https://images.unsplash.com/photo-1632369991393-9671f7536128?w=800&auto=format&fit=crop" alt="Raudibotn">
@@ -87,22 +95,22 @@
                 </div>
                 <div class="content-card location-card">
                     <img src="https://images.unsplash.com/photo-1579487785973-74d2ca7abdd5?w=800&auto=format&fit=crop" alt="Thakgil">
-                    <div class="card-body"><h2>8. Thakgil (Þakgil)</h2><p>Zonă de camping și drumeții, cu formațiuni stâncoase ascuțite, lângă un ghețar.</p></div>
+                    <div class="card-body"><h2>8. Thakgil (Þakgil)</h2><p>Zonă de hike, aproape de un ghețar.</p></div>
                 </div>
                 <div class="content-card location-card">
                     <img src="https://images.unsplash.com/photo-1503614472-8c93d56e92ce?w=800&auto=format&fit=crop" alt="Skogafoss">
-                    <div class="card-body"><h2>9. The Waterfall Hike</h2><p>Traseu de 13km ce pornește de la Skogafoss, cu peste 15 cascade.</p></div>
+                    <div class="card-body"><h2>9. The waterfall hike</h2><p>De la Skogafoss, ~13 km, ~15-20 cascade.</p></div>
                 </div>
                 <div class="content-card location-card">
                     <img src="https://images.unsplash.com/photo-1628359441744-53746736c244?w=800&auto=format&fit=crop" alt="Langisjor">
-                    <div class="card-body"><h2>10. Ofaerufoss + Langisjor</h2><p>Cascadă în canionul Eldgjá și unul dintre cele mai mari lacuri, perfect pentru drone.</p></div>
+                    <div class="card-body"><h2>10. Ofaerufoss + Langisjor</h2><p>Unul dintre cele mai mari lacuri, peisaje bune din dronă.</p></div>
                 </div>
                 <div class="content-card location-card">
                     <img src="https://images.unsplash.com/photo-1553667818-57fb44116c53?w=800&auto=format&fit=crop" alt="Braided Rivers">
-                    <div class="card-body"><h2>11. Braided Rivers</h2><p>Râuri glaciare care formează modele abstracte spectaculoase, văzute de sus.</p></div>
+                    <div class="card-body"><h2>11. Braided rivers of Iceland</h2><p>Râuri glaciare văzute de sus.</p></div>
                 </div>
                 <div class="content-card location-card">
-                    <div class="card-body"><h2>Și mai mult...</h2><p>Există și alte locații pe care le vom discuta și adăuga ulterior, când finalizăm itinerariul.</p></div>
+                    <div class="card-body"><h2>Și mai mult...</h2><p>Există și alte locații, care nu sunt incluse aici, pe care le vom discuta ulterior.</p></div>
                 </div>
             </div>
 
