--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <div class="card-body">
                                 <h2>MONSTER-ul</h2>
                                 <p>Mercedes Sprinter 4x4 modificat. Căruța noastră.</p>
-                                <span class="price-tag">Închiriere: 2800 €</span>
+                              
                             </div>
                         </div>
                     </div>
@@ -60,14 +60,15 @@
             <div id="budget-screen" class="screen">
                 <div class="total-budget-card">
                     <h3>Total / Persoană</h3>
-                    <p id="total-cost">900 €</p>
-                    <small>*Fără costul mașinii</small>
+                    <p id="total-cost">1835 €</p>
+                    
                 </div>
                 <ul class="budget-list">
                     <li><span>✈️ Bilete de Avion</span><span class="cost">~500 €</span></li>
+                    <li><span>🚐 Închiriere MONSTER</span><span class="cost">~935 €</span></li>
                     <li><span>⛽ Motorină "Monster"</span><span class="cost">~150 €</span></li>
                     <li><span>🏕️ Camping</span><span class="cost">100 €</span></li>
-                    <li><span>🍞 Mâncare</span><span class="cost">150 € <small>(Cerșim)</small></span></li>
+                    <li><span>🍞 Mâncare</span><span class="cost">150 € <small></small></span></li>
                 </ul>
             </div>
 
@@ -135,7 +136,7 @@
             </button>
             <button data-screen="map-screen" data-title="Traseu" class="nav-button">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/></svg>
-                <span>Traseu</span>
+                <span>Locatii</span>
             </button>
             <button data-screen="itinerary-screen" data-title="Itinerar" class="nav-button">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
